--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 <title>Astra Fit</title>
-<link rel="manifest" href="/public/manifest.webmanifest">
+
+<!-- percorsi RELATIVI, niente "/" iniziale -->
+<link rel="manifest" href="public/manifest.webmanifest">
 <meta name="theme-color" content="#c0c0c0">
-<link rel="apple-touch-icon" href="/public/icons/icon-192.png">
+<link rel="apple-touch-icon" href="public/icons/icon-192.png">
+
 <style>
   :root{--bg:#c0c0c0}
   html,body{height:100%;margin:0}
@@ -18,13 +21,16 @@
 </head>
 <body>
   <div class="card">
-    <div class="icon"><img src="/public/icons/icon-192.png" alt="Astra Fit" width="64" height="64"></div>
+    <div class="icon"><img src="public/icons/icon-192.png" alt="Astra Fit" width="64" height="64"></div>
     <h1>Astra Fit</h1>
     <p>Prototipo PWA pronto per il deploy su Vercel/GitHub Pages.</p>
     <p class="small">© Astra Fit • a cura di Fabio Muraca</p>
   </div>
+
 <script>
-if ('serviceWorker' in navigator){navigator.serviceWorker.register('/public/sw.js');}
+  if ('serviceWorker' in navigator){
+    navigator.serviceWorker.register('public/sw.js'); // relativo, non "/public/…"
+  }
 </script>
 </body>
 </html>
