--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <script>
   if ('serviceWorker' in navigator){
-    navigator.serviceWorker.register('public/sw.js'); // relativo, non "/public/…"
+    navigator.serviceWorker.register('public/sw.js'); 
   }
 </script>
 </body>
