--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 </head>
 <body>
   <div class="card">
-    <div class="icon"><img src="public/icons/icon-192.png" alt="Astra Fit" width="64" height="64"></div>
-    <h1>Astra Fit</h1>
-    <p>Prototipo PWA pronto per il deploy su Vercel/GitHub Pages.</p>
-    <p class="small">© Astra Fit • a cura di Fabio Muraca</p>
-  </div>
+  <div class="icon"><img src="public/icons/icon-192.png" alt="Astra Fit" width="64" height="64"></div>
+  <h1>Astra Fit</h1>
+  <p>Calcolo del fabbisogno calorico, macro e training con AI.</p>
+  <p class="small">© Astra Fit • a cura di Fabio Muraca</p>
+</div>
 
 <script>
   if ('serviceWorker' in navigator){
