--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <link rel="manifest" href="public/manifest.webmanifest">
 <meta name="theme-color" content="#c0c0c0">
-<link rel="apple-touch-icon" href="public/icons/icon-192.png">
+<link rel="apple-touch-icon" href="public/icons/astrafit-icon-192.png">
 
 <style>
   :root{--bg:#c0c0c0}
@@ -21,7 +21,7 @@
 </head>
 <body>
   <div class="card">
-  <div class="icon"><img src="public/icons/icon-192.png" alt="Astra Fit" width="64" height="64"></div>
+<div class="icon"><img src="public/icons/astrafit-icon-192.png" alt="Astra Fit" width="88" height="88"></div>
   <h1>Astra Fit</h1>
   <p>Calcolo del fabbisogno calorico, macro e training con AI.</p>
   <p class="small">© Astra Fit • a cura di Fabio Muraca</p>
