--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <title>Astra Fit</title>
 
+  <!-- Manifest PWA -->
   <link rel="manifest" href="public/manifest.webmanifest">
   <meta name="theme-color" content="#c0c0c0">
+
+  <!-- Icone PWA -->
   <link rel="apple-touch-icon" href="public/icons/astrafit-icon-192.png">
+
+  <!-- Favicon per browser -->
+  <link rel="icon" type="image/png" sizes="32x32" href="public/icons/astrafit-favicon-32.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="public/icons/astrafit-icon-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="public/icons/astrafit-icon-512.png">
 
   <style>
     :root{--bg:#c0c0c0}
