--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <!-- Icone PWA -->
   <link rel="apple-touch-icon" href="public/icons/astrafit-icon-192.png">
 
-  <!-- Favicon per browser -->
+  <!-- Favicon e icone vari formati -->
+  <link rel="icon" type="image/x-icon" href="public/icons/favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="public/icons/astrafit-favicon-32.png">
   <link rel="icon" type="image/png" sizes="192x192" href="public/icons/astrafit-icon-192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="public/icons/astrafit-icon-512.png">
