--- a/index.html
+++ b/index.html
@@ -5,34 +5,52 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <title>Astra Fit</title>
 
-  <!-- Favicon base -->
-  <link rel="icon" type="image/png" sizes="32x32" href="icons/astrafit-favicon-32.png">
-
-  <!-- Icone per PWA -->
-  <link rel="manifest" href="manifest.webmanifest">
-
-  <!-- Apple Touch Icon -->
-  <link rel="apple-touch-icon" href="icons/astrafit-icon-192.png">
-
-  <!-- Icona per i dispositivi ad alta risoluzione -->
-  <link rel="icon" type="image/png" sizes="192x192" href="icons/astrafit-icon-192.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="icons/astrafit-icon-512.png">
-
-  <!-- Tema browser -->
+  <!-- Manifest PWA -->
+  <link rel="manifest" href="public/manifest.webmanifest">
   <meta name="theme-color" content="#000000">
 
+  <!-- Favicon / Icone -->
+  <link rel="icon" type="image/png" sizes="32x32" href="public/icons/astrafit-favicon-32.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="public/icons/astrafit-icon-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="public/icons/astrafit-icon-512.png">
+  <link rel="apple-touch-icon" href="public/icons/astrafit-icon-192.png">
+
   <style>
-    :root{--bg:#c0c0c0}
-    html,body{height:100%;margin:0}
-    body{display:grid;place-items:center;background:var(--bg);font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif}
-    .card{background:#fff;border-radius:20px;padding:24px;box-shadow:0 10px 30px rgba(0,0,0,0.1);text-align:center}
-    .icon{width:88px;height:88px;border-radius:20px;background:#c0c0c0;display:grid;place-items:center;margin:0 auto 16px}
-    .small{font-size:12px;color:#666}
+    :root { --bg:#c0c0c0 }
+    html,body { height:100%; margin:0 }
+    body {
+      display:grid;
+      place-items:center;
+      background:var(--bg);
+      font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+    }
+    .card {
+      background:#fff;
+      border-radius:20px;
+      padding:24px;
+      box-shadow:0 10px 30px rgba(0,0,0,0.1);
+      text-align:center;
+    }
+    .icon {
+      width:88px;
+      height:88px;
+      border-radius:20px;
+      background:#c0c0c0;
+      display:grid;
+      place-items:center;
+      margin:0 auto 16px;
+    }
+    .small {
+      font-size:12px;
+      color:#666;
+    }
   </style>
 </head>
 <body>
   <div class="card">
-    <div class="icon"><img src="icons/astrafit-icon-192.png" alt="Astra Fit" width="64" height="64"></div>
+    <div class="icon">
+      <img src="public/icons/astrafit-icon-192.png" alt="Astra Fit" width="64" height="64">
+    </div>
     <h1>Astra Fit</h1>
     <p>Calcolo del fabbisogno calorico, macro e training con AI.</p>
     <p class="small">© Astra Fit • a cura di Fabio Muraca</p>
