--- a/index.html
+++ b/index.html
@@ -1,59 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="it">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <title>Astra Fit</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Manifest PWA -->
-  <link rel="manifest" href="public/manifest.webmanifest">
+  <title>AstraFit</title>
+
+  <!-- Manifest per Android/Chrome -->
+  <link rel="manifest" href="manifest.webmanifest">
+
+  <!-- Icona per iPhone/iPad -->
+  <link rel="apple-touch-icon" href="icons/astrafit-icon-512.png">
+
+  <!-- Permette a iOS di avviare la PWA a schermo intero -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+  <!-- Tema -->
   <meta name="theme-color" content="#000000">
-
-  <!-- Favicon / Icone -->
-  <link rel="icon" type="image/png" sizes="32x32" href="public/icons/astrafit-favicon-32.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="public/icons/astrafit-icon-192.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="public/icons/astrafit-icon-512.png">
-  <link rel="apple-touch-icon" href="public/icons/astrafit-icon-192.png">
-
-  <style>
-    :root { --bg:#c0c0c0 }
-    html,body { height:100%; margin:0 }
-    body {
-      display:grid;
-      place-items:center;
-      background:var(--bg);
-      font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-    }
-    .card {
-      background:#fff;
-      border-radius:20px;
-      padding:24px;
-      box-shadow:0 10px 30px rgba(0,0,0,0.1);
-      text-align:center;
-    }
-    .icon {
-      width:88px;
-      height:88px;
-      border-radius:20px;
-      background:#c0c0c0;
-      display:grid;
-      place-items:center;
-      margin:0 auto 16px;
-    }
-    .small {
-      font-size:12px;
-      color:#666;
-    }
-  </style>
 </head>
 <body>
-  <div class="card">
-    <div class="icon">
-      <img src="public/icons/astrafit-icon-192.png" alt="Astra Fit" width="64" height="64">
-    </div>
-    <h1>Astra Fit</h1>
-    <p>Calcolo del fabbisogno calorico, macro e training con AI.</p>
-    <p class="small">© Astra Fit • a cura di Fabio Muraca</p>
-  </div>
+  <h1>Benvenuto in AstraFit</h1>
+  <p>La tua Progressive Web App è attiva 🚀</p>
 </body>
 </html>
