--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Astra Fit</title>
 
-  <title>AstraFit</title>
-
-  <!-- Manifest per Android/Chrome -->
-  <link rel="manifest" href="manifest.webmanifest">
-
-  <!-- Icona per iPhone/iPad -->
-  <link rel="apple-touch-icon" href="icons/astrafit-icon-512.png">
-
-  <!-- Permette a iOS di avviare la PWA a schermo intero -->
+  <!-- Colori per Safari / iPhone -->
+  <meta name="theme-color" content="#000000">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="AstraFit">
 
-  <!-- Tema -->
-  <meta name="theme-color" content="#000000">
+  <!-- Icone -->
+  <link rel="apple-touch-icon" href="icons/Astrafit-512.png">
+  <link rel="icon" href="icons/astrafit-favicon-32.png" sizes="32x32" type="image/png">
+
+  <!-- Manifest -->
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 <body>
   <h1>Benvenuto in AstraFit</h1>
