--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="it">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Astra Fit</title>
+<<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#000000" />
 
-  <!-- Colori per Safari / iPhone -->
-  <meta name="theme-color" content="#000000">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-title" content="AstraFit">
+  <!-- iOS specific -->
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-  <!-- Icone -->
-  <link rel="apple-touch-icon" href="icons/Astrafit-512.png">
-  <link rel="icon" href="icons/astrafit-favicon-32.png" sizes="32x32" type="image/png">
+  <!-- App icons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon-180.png?v=3">
+  <link rel="icon" type="image/png" sizes="32x32" href="icons/astrafit-favicon-32.png?v=3">
+  <link rel="icon" type="image/png" sizes="192x192" href="icons/astrafit-icon-192.png?v=3">
 
   <!-- Manifest -->
-  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="manifest" href="manifest.webmanifest?v=3" />
+  
+  <title>AstraFit</title>
 </head>
 <body>
   <h1>Benvenuto in AstraFit</h1>
