--- a/index.html
+++ b/index.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html lang="it">
-<<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#000000" />
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- iOS specific -->
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-
-  <!-- App icons -->
-  <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon-180.png?v=3">
-  <link rel="icon" type="image/png" sizes="32x32" href="icons/astrafit-favicon-32.png?v=3">
-  <link rel="icon" type="image/png" sizes="192x192" href="icons/astrafit-icon-192.png?v=3">
-
-  <!-- Manifest -->
-  <link rel="manifest" href="manifest.webmanifest?v=3" />
-  
   <title>AstraFit</title>
+
+  <!-- iPhone Home Screen Icon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon-180.png?v=5">
+
+  <!-- Theme & PWA Settings -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="theme-color" content="#000000">
+
+  <!-- Manifest (per Android, non per iPhone) -->
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 <body>
-  <h1>Benvenuto in AstraFit</h1>
-  <p>La tua Progressive Web App è attiva 🚀</p>
+  <h1>AstraFit</h1>
+  <p>Benvenuto nella PWA AstraFit 🚀</p>
 </body>
 </html>
