--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AstraFit</title>
 
-  <!-- iPhone Home Screen Icon -->
- <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+  <!-- ✅ Icona iPhone -->
+  <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
-  <!-- Theme & PWA Settings -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="theme-color" content="#000000">
-
-  <!-- Manifest (per Android, non per iPhone) -->
-  <link rel="manifest" href="manifest.webmanifest">
+  <!-- ✅ Opzioni stile "app" su iPhone -->
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="AstraFit" />
 </head>
 <body>
   <h1>AstraFit</h1>
