--- a/index.html
+++ b/index.html
@@ -5,23 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>Astra Fit</title>
 
-  <!-- Icona Home iPhone: DEVE esistere in root accanto a index.html -->
-  <link rel="apple-touch-icon" href="apple-touch-icon.png?v=8" />
+  <!-- iPhone: icona Home (file in root) -->
+  <link rel="apple-touch-icon" href="apple-touch-icon.png?v=1" />
 
-  <!-- iOS stile app -->
+  <!-- iOS “app style” -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="apple-mobile-web-app-title" content="AstraFit" />
-
-  <!-- Forza modalità chiara -->
   <meta name="theme-color" content="#000000" />
   <meta name="color-scheme" content="light" />
 
+  <!-- PWA (utile anche per Android/Chrome) -->
+  <link rel="manifest" href="manifest.webmanifest" />
+  <script>
+    if ("serviceWorker" in navigator) {
+      navigator.serviceWorker.register("sw.js").catch(()=>{});
+    }
+  </script>
+
   <style>
-    :root { --bg:#ffffff; --card:#ffffff; --text:#000000; --muted:#666; }
+    :root { --bg:#fff; --card:#fff; --text:#000; --muted:#666; }
     html,body { height:100%; margin:0; }
     body {
-      background: var(--bg); color: var(--text);
+      background:var(--bg); color:var(--text);
       font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
       display:grid; place-items:center; padding:24px;
     }
@@ -30,10 +36,8 @@
       background:var(--card); border-radius:20px; padding:28px 22px;
       box-shadow:0 10px 30px rgba(0,0,0,.08); text-align:center;
     }
-    .icon {
-      width:88px; height:88px; margin:0 auto 14px; border-radius:20px; background:#000;
-      display:grid; place-items:center;
-    }
+    .icon { width:88px; height:88px; margin:0 auto 14px; border-radius:20px;
+            background:#000; display:grid; place-items:center; }
     .icon img { width:64px; height:64px; display:block; }
     h1 { margin:8px 0 6px; font-size:28px; }
     p { margin:6px 0; }
@@ -44,7 +48,7 @@
   <main class="wrap">
     <section class="card">
       <div class="icon">
-        <!-- Percorso definitivo su GitHub Pages (niente "public/") -->
+        <!-- ATTENZIONE: niente “public/”. Gli asset stanno in /icons -->
         <img src="icons/astrafit-icon-192.png" alt="Astra Fit" width="64" height="64" />
       </div>
       <h1>Astra Fit</h1>
